Перевёрстаны социальные ссылки 1. Добавлен элемент about__social-links в блок about для разметки блока с социальными ссылками 2. Добавлены элементы about__social-link для позиционирования ссылки 3. Заданы модификаторы about__social-link_fb для задания фона (изменение внешнего вида ссылки)

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -32,8 +32,40 @@
     margin-bottom: 5.3rem;
 }
 
-.about__description{
-    margin-bottom: 5.1rem;
+.about__social-links{
+    margin-top: 5.1rem;
+}
+
+.about__social-link{
+    display: inline-block;
+    background-size: cover;
+    width: 2.6rem;
+    height: 2.6rem;
+    text-indent: 9999px;
+}
+
+.about__social-link:not(:last-child){
+    margin-right: 2rem;
+}
+
+.about__social-link_fb{
+    background-image: url("../img/Facebook.png");
+}
+
+.about__social-link_gp{
+    background-image: url("../img/Google+.png");
+}
+
+.about__social-link_vm{
+    background-image: url("../img/Vimeo.png");
+}
+
+.about__social-link_dl{
+    background-image: url("../img/Dribbble.png");
+}
+
+.about__social-link_yt{
+    background-image: url("../img/YouTube.png");
 }
 
 .about__skill{
