--- a/css/style.css
+++ b/css/style.css
@@ -303,14 +303,39 @@
   text-transform: none;
   margin-bottom: 5.3rem;
 }
-.about__description {
-  margin-bottom: 5.1rem;
+.about__social-links {
+  margin-top: 5.1rem;
 }
-.skill {
+.about__social-link {
+  display: inline-block;
+  background-size: cover;
+  width: 2.6rem;
+  height: 2.6rem;
+  text-indent: 9999px;
+}
+.about__social-link:not(:last-child) {
+  margin-right: 2rem;
+}
+.about__social-link_fb {
+  background-image: url("../img/Facebook.png");
+}
+.about__social-link_gp {
+  background-image: url("../img/Google+.png");
+}
+.about__social-link_vm {
+  background-image: url("../img/Vimeo.png");
+}
+.about__social-link_dl {
+  background-image: url("../img/Dribbble.png");
+}
+.about__social-link_yt {
+  background-image: url("../img/YouTube.png");
+}
+.about__skill {
   display: flex;
   align-items: center;
 }
-.skill:not(:first-child) {
+.about__skill:not(:first-child) {
   margin-top: 1.3rem;
 }
 .skill__name {
