Изменено названия класса в блоке "about"  с табами 1. Изменены названия классов about__tab-activation на about__tab

--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@
 .about__info-container {
   width: 44%;
 }
-.about__tab-activation:hover {
+.about__tab:hover {
   cursor: pointer;
 }
 .about__tab-img {
