Изменения внешнего вида элемента, добавление анимационных эффектов 1. В menu добавлен анимационный эффект при переходе в состояния наведения и фокусирования 2. У кнопки добавлена сверху внутренния тень белого цвета 3. В блоке с portfolio к какртинками добавлена прозрачность и тень при наведении 4. В блоке about картинкам добавлена прозрачность при наведении

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -20,8 +20,13 @@
     width: 44%;
 }
 
-.about__tab:hover{
-    cursor: pointer;
+.about__tab{
+    transition: opacity .4s ease-in;
+
+    &:hover{
+        cursor: pointer;
+        opacity: .7;
+    }
 }
 
 .about__tab-img{
