--- a/css/blocks/button.less
+++ b/css/blocks/button.less
@@ -1,14 +1,14 @@
 .button{
-    transition: background .3s ease-in;
+    transition: background-color .3s ease-in;
     font-family: "Oswald";
     font-weight: 700;
     color: #fff;
     background: #fd5433;
-    border-top: 2px solid #ff6d51;
-    box-shadow: 0 6px 4px -4px #000;
-}
-
-.button:focus, .button:hover{
-    background: #ff6d51;
-    color: #fff;
+    box-shadow: inset 0 4px 12px -3px #fff,
+                0 6px 10px -3px #000;
+                
+    &:focus, &:hover{
+        background-color: #ff6d51;
+        color: #fff;
+    }
 }
