--- a/css/blocks/menu.less
+++ b/css/blocks/menu.less
@@ -24,13 +24,15 @@
     display: inline-block;
     font-weight: 700;
     padding: 4.7rem 1.5rem;
-    color: #474444; /*Временное решение*/
-}
+    color: #474444;
+    transition: background-color .2s ease-in,
+                color .2s ease-in;
 
-.menu__link:hover, .menu__link:focus{
-    background-color: #fd5433;
-    color: #fff;
-    outline: none;
+    &:hover, &:focus{
+        background-color: #fd5433;
+        color: #fff;
+        outline: none;
+    }
 }
 
 @media screen and (max-width: 399px){
@@ -43,7 +45,7 @@
         display: inline-block;
         font-weight: 700;
         padding: 2.3rem 1.3rem;
-        color: #474444; /*Временное решение*/
+        color: #474444;
     }
 
 }
