--- a/css/style.less
+++ b/css/style.less
@@ -208,9 +208,7 @@ a:focus, a:hover{
     width: 100%;
     padding: 1.5rem 0 1.2rem;
     margin-top: 2.4rem;
-    border-bottom: 0;
-    border-right: 0;
-    border-left: 0;
+    border: none;
     cursor: pointer;
 }
 
