Добавление блоков и удаление прежних элементов согласно БЭМ 1. Созданы новые блоки services и posts 2. Добавлены элементы в блоки services, about, posts

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -1,7 +1,11 @@
+.about__content{
+    padding-top: 6.6rem;
+}
+
 .about__tabs{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 3.6rem;
+    margin-bottom: 6.6rem;
 }
 
 .about__info{
@@ -59,6 +63,10 @@
     width: 2.6rem;
     height: 2.6rem;
     text-indent: -9999px;
+
+    &:hover{
+        opacity: .7;
+    }
 }
 
 .about__social-link:not(:last-child){
