--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -16,81 +16,17 @@
 }
 
 .section__content{
-    padding-top: 3.6rem;
     border-top: .1rem solid #828282;
 }
 
-.section__services-content{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.section__services-name{
-    margin-bottom: 3.4rem;
-    font-size: 3rem;
-    color: #474747;
-}
-
-.section__branding, .section__design, .section__marketing{
-    box-sizing: border-box;
-    width: 32%;
-    padding-top: 21rem;
-    padding-left: 2.3rem;
-    padding-right: 2.3rem;
-    text-align: center;
-    background-position-x: center;
-    background-repeat: no-repeat;
-}
-
-.section__branding{
-    background-image: url("../img/PEN.jpg");
-}
-
-.section__design{
-    background-image: url("../img/PC.jpg");
-}
-
-.section__marketing{
-    background-image: url("../img/Mic.jpg");
-}
-
-@media screen and (max-width: 767px){
-
-    .section__branding, .section__design, .section__marketing{
-         padding-top: 25rem;
-    }
-}
-
-@media screen and (max-width: 554px){
-
-    .section__branding, .section__design, .section__marketing{
-        width: 100%;
-        padding-left: 4.3rem;
-        padding-right: 4.3rem;
-        margin-bottom: 3.6rem;
-    }
-
-    .section__marketing{
-        margin-bottom: 0;
-    }
+.section__posts{
+    padding-bottom: 9.9rem;
+    border-bottom: .1rem solid #474444;
 }
 
 @media screen and (max-width: 399px){
 
     .section__title{
         font-size: 5.3rem;
-    }
-
-    .section__branding, .section__design, .section__marketing{
-        padding-top: 32rem;
-    }
-
-    .section__services-name{
-        font-size: 4.3rem;
-    }
-
-    .section__services-info{
-        font-size: 3rem;
     }
 }
