--- a/css/style.less
+++ b/css/style.less
@@ -22,9 +22,11 @@
 @import "blocks/home.less";
 @import "blocks/button.less";
 @import "blocks/section.less";
+@import "blocks/services.less";
 @import "blocks/portfolio.less";
 @import "blocks/about.less";
 @import "blocks/skill.less";
+@import "blocks/posts.less";
 
 @media screen and (min-width: 1401px){
 
@@ -99,58 +101,6 @@ a{
 
 a:focus, a:hover{
     color: #fd5433;
-}
-
-.posts__column{
-    display: inline-block;
-    vertical-align: top;
-    width: 49%;
-    margin-right: 1rem;
-}
-
-.posts__item-column{
-    margin-right: 0;
-}
-
-.posts__article{
-    margin-top: 9rem;
-}
-
-.posts__content{
-    padding-bottom: 9.9rem;
-    border-bottom: .1rem solid #474444;
-}
-
-.posts__column-content{
-    display: inline-block;
-    vertical-align: top;
-    width: 48%;
-    margin-left: 1.7rem;
-    color: #686868;
-}
-
-.posts__title{
-    font-size: 25px;
-    color: #3d3c3c;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.posts__date{
-    margin-top: 1rem;
-    padding-bottom: 1.8rem;
-    font: 1.5rem "Oswald-Bold";
-}
-
-.posts__month-hr{
-    padding-bottom: 1.4rem;
-    border-bottom: .4rem solid #fd5433;
-}
-
-.posts__column-text{
-    width: 88%;
-    margin-top: 3rem;
-    font: 1.6rem Arial;
 }
 
 .contact__content{
