Оптимизация сайта 1. Оптимизированны картинки 2. Минифицированы index.html и style.css в папке build 3. Поправлена вёрстка, убраны лишние классы в блоке services и posts

--- a/css/blocks/services.less
+++ b/css/blocks/services.less
@@ -1,3 +1,8 @@
+.services{
+    padding-bottom: 8.1rem;
+    border-bottom: .1rem solid #828282;
+}
+
 .services__content{
     padding-top: 6.5rem;
 }
@@ -22,19 +27,20 @@
     padding-right: 2.3rem;
     text-align: center;
     background-position-x: center;
+    background-size: 50% 50%;
     background-repeat: no-repeat;
 }
 
 .services__branding{
-    background-image: url("../img/PEN.jpg");
+    background-image: url("../img/pen.svg");
 }
 
 .services__design{
-    background-image: url("../img/PC.jpg");
+    background-image: url("../img/desktop.svg");
 }
 
 .services__marketing{
-    background-image: url("../img/Mic.jpg");
+    background-image: url("../img/mic.svg");
 }
 
 
@@ -60,7 +66,7 @@
 }
 
 @media screen and (max-width: 399px){
-    
+
     .services__branding, .services__design, .services__marketing{
         padding-top: 32rem;
     }
