--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -1,5 +1,10 @@
 .header{
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    background-color: #fff;
     color: #474444;
+    box-shadow: 0 .3rem .5rem #474747;
 }
 
 .header__container{
