--- a/css/blocks/menu.less
+++ b/css/blocks/menu.less
@@ -25,8 +25,7 @@
     font-weight: 700;
     padding: 4.7rem 1.5rem;
     color: #474444;
-    transition: background-color .2s ease-in,
-                color .2s ease-in;
+    transition: color .2s ease-in;
 
     &:hover, &:focus{
         background-color: #fd5433;
