--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,12 @@
   }
 }
 .header {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background-color: #fff;
   color: #474444;
+  box-shadow: 0 .3rem .5rem #474747;
 }
 .header__container {
   display: flex;
@@ -71,7 +76,7 @@
   font-weight: 700;
   padding: 4.7rem 1.5rem;
   color: #474444;
-  transition: background-color 0.2s ease-in, color 0.2s ease-in;
+  transition: color 0.2s ease-in;
 }
 .menu__link:hover,
 .menu__link:focus {
@@ -176,10 +181,6 @@
 .section {
   margin-top: 3.8rem;
 }
-.section__services {
-  padding-bottom: 8.1rem;
-  border-bottom: .1rem solid #828282;
-}
 .section__title {
   margin-bottom: 3.6rem;
   font-size: 3.2rem;
@@ -190,14 +191,14 @@
 .section__content {
   border-top: .1rem solid #828282;
 }
-.section__posts {
-  padding-bottom: 9.9rem;
-  border-bottom: .1rem solid #474444;
-}
 @media screen and (max-width: 399px) {
   .section__title {
     font-size: 5.3rem;
   }
+}
+.services {
+  padding-bottom: 8.1rem;
+  border-bottom: .1rem solid #828282;
 }
 .services__content {
   padding-top: 6.5rem;
@@ -222,16 +223,17 @@
   padding-right: 2.3rem;
   text-align: center;
   background-position-x: center;
+  background-size: 50% 50%;
   background-repeat: no-repeat;
 }
 .services__branding {
-  background-image: url("../img/PEN.jpg");
+  background-image: url("../img/pen.svg");
 }
 .services__design {
-  background-image: url("../img/PC.jpg");
+  background-image: url("../img/desktop.svg");
 }
 .services__marketing {
-  background-image: url("../img/Mic.jpg");
+  background-image: url("../img/mic.svg");
 }
 @media screen and (max-width: 767px) {
   .services__branding,
@@ -392,6 +394,10 @@
 }
 .skill__percent {
   margin-left: 1.8em;
+}
+.posts {
+  padding-bottom: 9.9rem;
+  border-bottom: .1rem solid #474444;
 }
 .posts__content {
   padding-top: 9.9rem;
