Переверстал блок "posts"

--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,7 @@
 @import "blocks/about.less";
 @import "blocks/skill.less";
 @import "blocks/posts.less";
+@import "blocks/blog.less";
 
 @media screen and (min-width: 1401px){
 
