--- a/css/style.css
+++ b/css/style.css
@@ -398,45 +398,66 @@
 .posts {
   padding-bottom: 9.9rem;
   border-bottom: .1rem solid #474444;
+  color: #686868;
 }
 .posts__content {
   padding-top: 9.9rem;
 }
-.posts__column {
-  display: inline-block;
-  vertical-align: top;
-  width: 49%;
-  margin-right: 1rem;
+.posts__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.posts__item-column {
-  margin-right: 0;
+.blog {
+  display: flex;
+  width: 47%;
 }
-.posts__column-content {
-  display: inline-block;
-  vertical-align: top;
-  width: 48%;
-  margin-left: 1.7rem;
-  color: #686868;
+.blog:not(:first-child) {
+  margin-top: 8.8rem;
 }
-.posts__title {
-  font-size: 25px;
-  color: #3d3c3c;
+.blog:nth-child(2) {
   margin-top: 0;
-  margin-bottom: 0;
 }
-.posts__date {
-  margin-top: 1rem;
-  padding-bottom: 1.8rem;
-  font: 1.5rem "Oswald-Bold";
+.blog__container {
+  width: 45%;
 }
-.posts__month-hr {
-  padding-bottom: 1.4rem;
-  border-bottom: .4rem solid #fd5433;
+.blog__container:first-child {
+  margin-right: 3rem;
 }
-.posts__column-text {
-  width: 88%;
-  margin-top: 3rem;
-  font: 1.6rem Arial;
+.blog__img {
+  display: block;
+  transition: opacity 0.4s ease-in;
+}
+.blog__img:hover {
+  opacity: .5;
+}
+.blog__header {
+  padding-bottom: 1.5rem;
+  position: relative;
+}
+.blog__title {
+  font-size: 2.5rem;
+  margin-bottom: 1.6rem;
+}
+.blog__link {
+  color: #3d3c3c;
+  transition: color .4s;
+}
+.blog__date {
+  font-size: 1.5rem;
+  font-family: "Oswald";
+  font-weight: 700;
+}
+.blog__header:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 30%;
+  border-bottom: 5px solid #fd5433;
+}
+.blog__info {
+  margin-top: 3.6rem;
 }
 @media screen and (min-width: 1401px) {
   html {
