Изменены единицы измерения оризонтальной линии для видимости на низких разрешениях

--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -11,7 +11,7 @@
 }
 
 .section__content{
-    border-top: .1rem solid #828282;
+    border-top: 1px solid #828282;
 }
 
 @media screen and (max-width: 399px){
