--- a/css/blocks/services.less
+++ b/css/blocks/services.less
@@ -1,6 +1,6 @@
 .services{
     padding-bottom: 8.1rem;
-    border-bottom: .1rem solid #828282;
+    border-bottom: 1px solid #828282;
 }
 
 .services__content{
