--- a/css/blocks/posts.less
+++ b/css/blocks/posts.less
@@ -1,6 +1,6 @@
 .posts{
     padding-bottom: 9.9rem;
-    border-bottom: .1rem solid #474444;
+    border-bottom: 1px solid #474444;
     color: #686868;
 }
 
