--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@
   color: #fd5433;
 }
 .section__content {
-  border-top: .1rem solid #828282;
+  border-top: 1px solid #828282;
 }
 @media screen and (max-width: 399px) {
   .section__title {
@@ -198,7 +198,7 @@
 }
 .services {
   padding-bottom: 8.1rem;
-  border-bottom: .1rem solid #828282;
+  border-bottom: 1px solid #828282;
 }
 .services__content {
   padding-top: 6.5rem;
@@ -397,7 +397,7 @@
 }
 .posts {
   padding-bottom: 9.9rem;
-  border-bottom: .1rem solid #474444;
+  border-bottom: 1px solid #474444;
   color: #686868;
 }
 .posts__content {
