--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -1,10 +1,40 @@
 .header{
-    position: fixed;
-    z-index: 100;
-    width: 100%;
     background-color: #fff;
     color: #474444;
-    box-shadow: 0 .3rem .5rem #474747;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1400px){
+
+    .header{
+        position: fixed;
+        z-index: 100;
+        width: 100%;
+        box-shadow: 0 .3rem .5rem #474747;
+    }
+
+    .header__menu{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1401px){
+
+    .header__menu{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 783px){
+
+    .header__menu{
+        display: block;
+        color: #fff;
+        background: #fd5433;
+    }
+
+    .menu{
+        display: none;
+    }
 }
 
 .header__container{
