--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,34 @@
   }
 }
 .header {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
   background-color: #fff;
   color: #474444;
-  box-shadow: 0 .3rem .5rem #474747;
+}
+@media screen and (min-width: 768px) and (max-width: 1400px) {
+  .header {
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    box-shadow: 0 .3rem .5rem #474747;
+  }
+  .header__menu {
+    display: none;
+  }
+}
+@media screen and (min-width: 1401px) {
+  .header__menu {
+    display: none;
+  }
+}
+@media screen and (max-width: 783px) {
+  .header__menu {
+    display: block;
+    color: #fff;
+    background: #fd5433;
+  }
+  .menu {
+    display: none;
+  }
 }
 .header__container {
   display: flex;
@@ -459,6 +481,80 @@
 .blog__info {
   margin-top: 3.6rem;
 }
+.contact__content {
+  background-image: url("../img/bg-city.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 3rem;
+  width: 100%;
+  position: relative;
+  border: none;
+}
+.feedback {
+  padding: 2.8rem 1rem 0;
+  text-align: center;
+  font-size: 2rem;
+  color: #fd5433;
+}
+::-webkit-input-placeholder {
+  font-size: 2rem;
+  color: #fd5433;
+}
+.feedback__name {
+  box-sizing: border-box;
+  padding: 2.1rem 2.1rem 1.9rem;
+  width: 48.5%;
+  font-size: 2rem;
+  color: #fd5433;
+}
+.feedback__name:focus {
+  outline: 2px solid #fd5433;
+}
+.feedback__email {
+  border: none;
+  box-sizing: border-box;
+  padding: 2.1rem 2.1rem 1.9rem;
+  margin-left: 2.7%;
+  width: 48%;
+  font-size: 2rem;
+  color: #fd5433;
+}
+.feedback__email:focus {
+  outline: 2px solid #fd5433;
+}
+.feedback__message {
+  font-family: Arial;
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 2.1rem 2.1rem 1.9rem;
+  margin-top: 2.8rem;
+  font-size: 2rem;
+  color: #fd5433;
+}
+.feedback__message:focus {
+  outline: 2px solid #fd5433;
+}
+.feedback__button {
+  font-size: 2.6rem;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 1.5rem 0 1.2rem;
+  margin-top: 2.4rem;
+  border: none;
+  cursor: pointer;
+}
+.footer {
+  margin-top: 8.3rem;
+  border-top: 1px solid #fff;
+}
+.footer__content {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 1.8rem;
+  color: #fff;
+}
 @media screen and (min-width: 1401px) {
   html {
     font-size: 70%;
@@ -469,7 +565,7 @@
     font-size: 62.5%;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 400px) and (max-width: 767px) {
   html {
     font-size: 52.5%;
   }
@@ -516,66 +612,4 @@ a {
 a:focus,
 a:hover {
   color: #fd5433;
-}
-.contact__content {
-  background-image: url("../img/bg-city.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 3rem;
-  width: 100%;
-  position: relative;
-  border: 0;
-}
-.feedback {
-  padding: 2.8rem 1rem 0;
-  text-align: center;
-  font-size: 2rem;
-  color: #fd5433;
-}
-::-webkit-input-placeholder {
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__name {
-  box-sizing: border-box;
-  padding: 2.1rem 2.1rem 1.9rem;
-  width: 48.5%;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__email {
-  box-sizing: border-box;
-  padding: 2.1rem 2.1rem 1.9rem;
-  margin-left: 2.7%;
-  width: 48%;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__message {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 2.1rem 2.1rem 1.9rem;
-  margin-top: 2.8rem;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__button {
-  font-size: 2.6rem;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 1.5rem 0 1.2rem;
-  margin-top: 2.4rem;
-  border: none;
-  cursor: pointer;
-}
-.footer {
-  margin-top: 8.3rem;
-  border-top: .1rem solid #fff;
-}
-.footer__content {
-  margin-top: 2rem;
-  text-align: center;
-  font-size: 1.8rem;
-  color: #fff;
 }
