--- a/css/style.less
+++ b/css/style.less
@@ -28,6 +28,7 @@
 @import "blocks/skill.less";
 @import "blocks/posts.less";
 @import "blocks/blog.less";
+@import "blocks/contact.less";
 
 @media screen and (min-width: 1401px){
 
@@ -43,7 +44,7 @@
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (min-width: 400px) and (max-width: 767px){
 
     html{
         font-size: 52.5%;
@@ -102,75 +103,4 @@ a{
 
 a:focus, a:hover{
     color: #fd5433;
-}
-
-.contact__content{
-    background-image: url("../img/bg-city.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-bottom: 3rem;
-    width: 100%;
-    position: relative;
-    border: 0;
-}
-
-.feedback{
-    padding: 2.8rem 1rem 0;
-    text-align: center;
-    font-size: 2rem;
-    color: #fd5433;
-}
-
-::-webkit-input-placeholder{
-   font-size: 2rem;
-   color:  #fd5433;
-}
-
-.feedback__name{
-    box-sizing: border-box;
-    padding: 2.1rem 2.1rem 1.9rem;
-    width: 48.5%;
-    font-size: 2rem;
-    color: #fd5433;
-}
-
-.feedback__email{
-    box-sizing: border-box;
-    padding: 2.1rem 2.1rem 1.9rem;
-    margin-left: 2.7%;
-    width: 48%;
-    font-size: 2rem;
-    color: #fd5433;
-}
-
-.feedback__message{
-    box-sizing: border-box;
-    width: 100%;
-    padding: 2.1rem 2.1rem 1.9rem;
-    margin-top: 2.8rem;
-    font-size: 2rem;
-    color:  #fd5433;
-}
-
-.feedback__button{
-    font-size: 2.6rem;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 1.5rem 0 1.2rem;
-    margin-top: 2.4rem;
-    border: none;
-    cursor: pointer;
-}
-
-.footer{
-    margin-top: 8.3rem;
-    border-top: .1rem solid #fff;
-}
-
-.footer__content{
-    margin-top: 2rem;
-    text-align: center;
-    font-size: 1.8rem;
-    color: #fff;
 }
