Начало адаптивности в шапке

--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -27,7 +27,7 @@
 @media screen and (max-width: 783px){
 
     .header__menu{
-        display: block;
+        display: inline-block;
         color: #fff;
         background: #fd5433;
     }
