--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -26,10 +26,20 @@
 
 @media screen and (max-width: 783px){
 
+    .header__logo{
+        float: left;
+    }
+
     .header__menu{
-        display: inline-block;
+        float: right;
         color: #fff;
         background: #fd5433;
+    }
+
+    .header:after{
+        content:"";
+        display: block;
+        clear: both;
     }
 
     .menu{
