--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -9,7 +9,7 @@
         position: fixed;
         z-index: 100;
         width: 100%;
-        box-shadow: 0 .3rem .5rem #474747;
+        box-shadow: 0 .1rem 1.5rem rgba(0, 0, 0, .07);
     }
 
     .header__menu{
@@ -42,9 +42,6 @@
         clear: both;
     }
 
-    .menu{
-        display: none;
-    }
 }
 
 .header__container{
