--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -5,8 +5,25 @@
     flex-wrap: wrap;
 }
 
+@media screen and (max-width: 767px){
+
+    .portfolio__link{
+        width: 40%;
+    }
+
+    .protfolio__content{
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 768px){
+
+    .portfolio__link{
+        width: 16.5%;
+    }
+}
+
 .portfolio__link{
-    width: 16.65%;
     transition: opacity .3s ease-in,
                 box-shadow .3s ease-in;
 
