--- a/css/blocks/posts.less
+++ b/css/blocks/posts.less
@@ -8,8 +8,11 @@
     padding-top: 9.9rem;
 }
 
-.posts__container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+@media screen and (min-width: 768px){
+
+    .posts__container{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
