--- a/css/blocks/services.less
+++ b/css/blocks/services.less
@@ -19,6 +19,13 @@
     color: #474747;
 }
 
+@media screen and (min-width: 768px){
+    
+    .services__name{
+        margin-bottom: 3.4rem;
+    }
+}
+
 .services__branding, .services__design, .services__marketing{
     box-sizing: border-box;
     width: 32%;
@@ -68,14 +75,11 @@
 @media screen and (max-width: 399px){
 
     .services__branding, .services__design, .services__marketing{
-        padding-top: 32rem;
+        padding-top: 20rem;
     }
 
     .services__name{
         font-size: 4.3rem;
-    }
-
-    .services__info{
-        font-size: 3rem;
+        margin-bottom: 1.4rem;
     }
 }
