--- a/css/blocks/contact.less
+++ b/css/blocks/contact.less
@@ -21,10 +21,36 @@
    color:  #fd5433;
 }
 
+
+@media screen and (min-width: 768px){
+
+    .feedback__name{
+        width: 48.5%;
+    }
+
+    .feedback__email{
+        width: 48%;
+        margin-left: 2.7%;
+    }
+}
+
+@media screen and (max-width: 767px){
+
+    .feedback__name{
+        width: 100%;
+        display: block;
+    }
+
+    .feedback__email{
+        width: 100%;
+        display: block;
+        margin-top: 3rem;
+    }
+}
+
 .feedback__name{
     box-sizing: border-box;
     padding: 2.1rem 2.1rem 1.9rem;
-    width: 48.5%;
     font-size: 2rem;
     color: #fd5433;
 
@@ -37,8 +63,6 @@
     border: none;
     box-sizing: border-box;
     padding: 2.1rem 2.1rem 1.9rem;
-    margin-left: 2.7%;
-    width: 48%;
     font-size: 2rem;
     color: #fd5433;
 
