--- a/css/blocks/menu.less
+++ b/css/blocks/menu.less
@@ -10,6 +10,8 @@
     list-style-type: none;
 }
 
+@media screen and (min-width: 800px){
+
 .menu__list-item{
     float: left;
 }
@@ -33,6 +35,14 @@
         outline: none;
     }
 }
+}
+
+@media screen and (min-width: 800px){
+
+    .menu__button{
+        display: none;
+    }
+}
 
 @media screen and (max-width: 399px){
 
@@ -47,4 +57,84 @@
         color: #474444;
     }
 
+}
+
+@media screen and (max-width: 799px){
+
+    .menu__list{
+      display: none;
+      margin-right: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .menu__link{
+      display: block;
+      font-weight: bold;
+      color: #474444;
+      padding: 1rem;
+      font-size: 1.4rem;
+      text-align: center;
+      text-transform: uppercase;
+      text-decoration: none;
+      background-color: #fff;
+      transition: background-color .1s linear, color .1s linear;
+    }
+
+    .menu__list-item{
+        width: 100%;
+    }
+
+    .menu__list-item:not(:first-of-type){
+      border-top: 1px solid rgba(255, 255, 255, .2);
+    }
+
+    .menu__list-item:not(:last-of-type){
+      border-bottom: 1px solid rgba(0, 0, 0, .2);
+    }
+
+    .menu__list-item:last-of-type{
+      box-shadow: inset 0 -5px 10px -5px rgba(0, 0, 0, .4);
+    }
+
+    .menu__link:hover{
+      background: #fd5433;
+      color: #fff;
+    }
+
+    .menu__button{
+        position: absolute;
+        top: 4.5rem;
+        right: 55px;
+        z-index: 999;
+        width: 26px;
+        height: 23px;
+        padding: 0;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background: url("data:image/svg+xml;utf8,<svg version='1.0' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='25px' height='23px' viewBox='0 0 25 23' enable-background='new 0 0 25 23' xml:space='preserve'> <g><rect width='25' height='4' fill='#fd5433' /><rect y='9' width='25' height='4' fill='#fd5433' /><rect y='18' width='25' height='4' fill='#fd5433' /></g></svg>") no-repeat;
+    }
+
+    .menu.open{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #fff;
+        padding-top: 50%;
+        z-index: 500;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .menu.open .menu__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu.open .menu__button{
+        background-image: url("data:image/svg+xml;utf8,<svg version='1.0' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='22.199px' height='22.199px' viewBox='0 0 22.199 22.199' enable-background='new 0 0 22.199 22.199' xml:space='preserve'> <polygon points='22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 ' fill='#fd5433'/> </svg>");
+    }
 }
